[Fix] fix tinyMCE responsive on mobile, fix animation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,5 +14,5 @@
 .list-enter-from,
 .list-leave-to {
   opacity: 0;
-  transform: translateX(200px)
+  transform: translateX(-300px)
 }
